# rusb

./: .gitignore  AGENTS.md  OLLAMA_ASSISTANT_IMPROVEMENTS.md  OLLAMA_ASSISTANT_PHASE1_COMPLETE.md  OLLAMA_ASSISTANT_SUMMARY.md  README.md
docs/: ESP32.md  FTDI.md  STM32.md  logger.md
embedded/: Cargo.toml  README.md
embedded/firmware/: Cargo.toml
embedded/firmware/src/: lib.rs
embedded/host/: Cargo.toml
embedded/host/src/: main.rs
legacy/libusb-c/: GEMINI.md
legacy/libusb-c/matlab/: SerialDevice.m  build_serial_mex.m  example.c  libusb_matlab.code-workspace  serial_comm.c  serial_comm.h  serial_mex.cpp  serial_mex.hpp  use_serial_mex.m
legacy/libusb-c/tests-c/webusb-test-shim/: package-lock.json  package.json
rusb/: CONTRIBUTING.md  Cargo.toml  TESTING.md  USB3_PLAN.md  build.rs  justfile
rusb/examples/: esp32_s3_flash.rs
rusb/src/: lib.rs
rusb/src/platform/: android.rs  linux.rs  macos.rs  mod.rs  not_supported.rs  wasm.rs  windows.rs
rusb/src/support/: esp32.rs  ftdi.rs  logger.rs  mod.rs  stm32.rs
rusb/tests/: api_compilation.rs  windows_compare.rs  windows_equivalence.rs
tools/: README_OLLAMA.md  ollama_assistant.py  ollama_config.toml  setup_ollama.ps1  setup_ollama.sh
