[package]
name = "rusb"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
webusb = ["dep:js-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_IO",
    "Win32_Devices_Properties",
    "Win32_Devices_Usb",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8.6"
io-kit-sys = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.js-sys]
version = "0.3.70"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.93"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen-futures]
version = "0.4.43"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.70"
optional = true
features = [
    "Window",
    "Navigator",
    "DomException",
    "Usb",
    "UsbDevice",
    "UsbConfiguration",
    "UsbInterface",
    "UsbControlTransferParameters",
    "UsbDirection",
    "UsbRecipient",
    "UsbRequestType",
    "UsbTransferStatus",
    "UsbInTransferResult",
    "UsbOutTransferResult",
]

[target.'cfg(target_os = "windows")'.dev-dependencies]
libloading = "0.8"
